fixed avatar glow gap

--- a/css/animations.css
+++ b/css/animations.css
@@ -1,15 +1,1 @@
-body {
-    animation: fadeInAnimation ease 1.5s;
-    background-color: #222;
-    animation-iteration-count: 1;
-    animation-fill-mode: forwards;
-}
 
-@keyframes fadeInAnimation {
-    0% {
-        opacity: 0;
-    }
-    100% {
-        opacity: 1;
-    }
-}
