--- a/main.css
+++ b/main.css
@@ -39,7 +39,7 @@ body, html {
   left: 15px;
 
   border-radius: 100%;
-  box-shadow: 0px 0px 25px #fff;
+  box-shadow: 0px 0px 20px #fff;
 }
 .discord-name {
   font-family: Montserrat;
@@ -57,6 +57,7 @@ body, html {
   font-size: 17px;
 
   background: -webkit-linear-gradient(45deg, #fa69c0, #e87bbc);
+  background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 
@@ -90,19 +91,19 @@ body, html {
   left: 143px;
 }
 .finnish-flag {
-  height: 25px;
-  width: 25px;
+  height: 20px;
+  width: 20px;
 
   position: absolute;
-  top: 3px;
-  left: 5px;
+  top: 4.5px;
+  left: 9px;
 }
 .trans-flag {
-  height: 25px;
-  width: 25px;
+  height: 20px;
+  width: 20px;
 
   position: absolute;
-  top: 3px;
+  top: 4.5px;
   left: 45px;
 }
 .h1 {
